--- a/app/src/main/res/layout/songlist_item_list.xml
+++ b/app/src/main/res/layout/songlist_item_list.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
-
-    <ImageView
-        android:id="@+id/img_songlist_icon"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/crdv_icon"
         android:layout_width="56dp"
-        android:layout_height="56dp" />
+        android:layout_height="56dp"
+        android:layout_marginLeft="5dp"
+        app:cardCornerRadius="10dp" >
 
+        <ImageView
+            android:id="@+id/img_songlist_icon"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </androidx.cardview.widget.CardView>
     <TextView
         android:id="@+id/txt_songlist_name"
         android:layout_width="wrap_content"
