--- a/app/src/main/res/layout/activity_localsongs.xml
+++ b/app/src/main/res/layout/activity_localsongs.xml
@@ -22,6 +22,7 @@
             android:layout_weight="4" >
 
             <TextView
+                android:id="@+id/txt_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
