--- a/app/src/main/res/layout/fg_music.xml
+++ b/app/src/main/res/layout/fg_music.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:text="最近播放" />
+            android:text="我喜欢" />
 
         <Button
             android:id="@+id/btn_download_manage"
